--- a/settings.json
+++ b/settings.json
@@ -4,10 +4,10 @@
 	"antihidetag": true,
 	"user_register": true,
 	"antidelete" : false,
-	"anticall": true,
+	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
+	"ownerNumber": "6282287219167",
 	"ownerNumberr": "62887435047326",
 	"cr": "@ZeeoneOfc",
 	"yt":"bit.ly/ytzeeoneofc",
@@ -16,8 +16,8 @@
 	"donate": "bit.ly/dtzeeoneofc",
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
+	"ownername": "S E N P A I CHAN",
+	"botname":"SENPΛI BӨƬ",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"IMG_20211001_074948_766-min.jpg",
 	"fakethumb":"IMG_20211001_074948_766-min.jpg", 
